--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,13 +6,14 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Class page Tab -->
-  <ion-tab title="Class page" icon-off="ion-ios-map" icon-on="ion-ios-map" href="#/tab/classpage">
+  <ion-tab title="Class page" icon-off="ion-map" icon-on="ion-map" href="#/tab/classpage">
     <ion-nav-view name="tab-classpage"></ion-nav-view>
+    <ion-nav-view name="tab-play-game"></ion-nav-view>
   </ion-tab>
 
   <!-- Recent Tab -->
   <ion-tab title="Recent" icon-off="ion-ios-clock-outline" icon-on="ion-ios-clock" href="#/tab/recent">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+    <ion-nav-view name="tab-recent"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
