--- a/www/templates/tab-recent.html
+++ b/www/templates/tab-recent.html
@@ -1,16 +1,10 @@
-<ion-view view-title="Recent activity">
-  <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
+<ion-view view-title="Your recent activity" ng-controller="RecentCtrl">
+  <ion-content class="padding">
+    <div class="list card">
+      <div class="item item-body" ng-repeat="fi in feed_items">
+        <h2>{{fi.sourceable_id}}</h2>
+        <p>{{fi}}</p>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
