Play game routing now works. Back button still glitchy.
Touching up game routing

--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Play a game!" ng-controller="PlayGameCtrl">
   <ion-content>
-    <h1>Play a game!</h1>
-    <div style="width:200px; height: 200px; background-color: red"></div>
+    <h1>Play {{ag.game.activity.name}}</h1>
+    <div style="width:200px; height: 200px; background-color: red; color: white;">iframe goes here</div>
   </ion-content>
 </ion-view>
