branch: lzapp_1a desc: lz-app work in progress (wip)
- Add remote service contstants for testing native app
  (lgz.ivanix.com/api, lgz.ivanix.games)

- Fixed classpage view refresh when returning from playgame view
- Fixed  controllers being called twice.
- Jslint cleanup
- Add build.env to access local up-to-date node_modules/.bin build commands
- Refrence bundled ionic and angular javascript libs.
  - Removed separate angular lib

- Added "com.ivanixmobile.lgz" appid required for native app compile by
  ivanix mobile llc

--- a/www/templates/tab-classpage.html
+++ b/www/templates/tab-classpage.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{course.name}} class page" ng-controller="ClassPageCtrl">
+<ion-view view-title="{{course.name}} class page" xxx-controller="ClassPageCtrl">
   <ion-content class="padding">
     <div class="list card">
       <div class="item item-divider">Games</div>
