--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -1,6 +1,11 @@
-<ion-view view-title="Play a game!" ng-controller="PlayGameCtrl">
-  <ion-content>
+<ion-view view-title="Play a game!" xxx-controller="PlayGameCtrl">
     <h1>Play {{ag.game.activity.name}}</h1>
-    <div style="width:200px; height: 200px; background-color: red; color: white;">iframe goes here</div>
-  </ion-content>
+    <h1>Play {{ag.game.activity.swf}}</h1>
+    <!--
+    <div style="width:200px; height: 200px; background-color: red; color: white;"/>
+    -->
+    <div style="">
+<iframe id="lgzFrame"  src="http://localhost/Projects/Clients/LinguaZone/lz-games/html5_games/sources/"
+frame.html" swf="{{ag.game.activity.swf}}" gameid="" userid="" height="425" width="600" frameBorder="0" allowfullscreen  webkitallowfullscreen mozallowfullscreen onload="console.log('iframe1')"></iframe>
+    </div>
 </ion-view>
