--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Account" ng-controller="AccountCtrl">
+<ion-view view-title="Account" xxx-controller="AccountCtrl">
   <ion-content>
     <div class="card">
       <div class="item item-divider">
