--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -9,6 +9,8 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Class page" icon-off="ion-map" icon-on="ion-map" href="#/app/classpage">
     <ion-nav-view name="app-classpage"></ion-nav-view>
     <ion-nav-view name="app-play-game"></ion-nav-view>
+    <ion-nav-view name="app-review-word-list"></ion-nav-view>
+    <ion-nav-view name="app-view-post"></ion-nav-view>
   </ion-tab>
 
   <!-- Recent Tab -->
