--- a/www/templates/review-word-list.html
+++ b/www/templates/review-word-list.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Study a word list" ng-controller="ReviewWordListCtrl">
   <ion-content>
-    <h1>Study a word list</h1>
+    <h1>{{list.description}}</h1>
     <table>
-      <tr>
-        <td>Table of words</td>
-        <td>...goes here</td>
+      <tr ng-repeat="node in nodes">
+        <td>{{node.question._content}}</td>
+        <td>{{node.response._content}}</td>
       </tr>
     </table>
   </ion-content>
