--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,9 @@
 /* Empty. Add your own CSS if you like */
+.audio_comment {
+  padding: 5px;
+  margin: 10px 0px;
+  background-color: #CCC;
+}
+.audio_player {
+  border: 1px solid black;
+}
