--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,31 +1,44 @@
 <ion-view view-title="Account" ng-controller="AccountCtrl">
   <ion-content>
+    
     <div class="card">
       <div class="item item-divider">
         Account info
       </div>
-      <div class="item item-text-wrap">
-        {{student.display_name}}<br />
-        <em>{{student.email}}</em>
+      <div class="item item-text-wrap" ng-show="user.uid">
+        <div>
+          {{student.display_name}}<br />
+          <em>{{student.email}}</em>
+        </div>
+        <button class="button button-assertive" ng-click="handleSignOut()">
+          Sign out of your account <i class="icon ion-log-out"></i>
+        </button>
+      </div>
+      <div class="item item-text-wrap" ng-show="!user.uid">
+        <button class="button button-clear button-balanced" ui-sref="app.login">
+          <i class="icon ion-log-in"></i> Sign in to your account
+        </button>
       </div>
     </div>
+    
     <div class="card list">
       <div class="item item-divider">
         Class registration
       </div>
-      <label class="item item-radio" ng-repeat="reg in registrations track by $index">
-        <input type="radio" name="current_section" checked>
+      <!-- TODO: Registrations should sort in order of when the registration was created. Currently not working. -->
+      <label class="item item-radio" ng-repeat="reg in registrations track by $index | orderBy : sortRegistration(reg) : true">
+        <input type="radio" name="currentCourse" checked ng-click="updateCurrentCourse(reg.course.id)">
         <i class="radio-icon ion-checkmark"></i>
         <div class="item-content">
-          {{reg.course_id}} (Class name)<br />
-          with (Teacher name)<br />
-          at The Schoolhouse (School name)
+          {{reg.course.name}}<br />
+          taught by {{reg.course.user.display_name}}<br />
+          at {{reg.course.user.school.name}}
         </div>
       </label>
-    </div>
-    <div style="text-align: center">
-      <button class="button button-assertive">
-        <i class="icon ion-log-out"></i> Sign out of your account
+      <div>
+        <button class="button button-clear button-positive" ui-sref="app.login">
+          <i class="icon ion-ios-search"></i> Search for a new class page
+        </button>
       </div>
     </div>
   </ion-content>
