Introducing Protractor tests and fixed data binding issues.

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Account" ng-controller="AccountCtrl">
   <ion-content>
     
-    <div class="card">
+    <div class="card" id="accountInfo">
       <div class="item item-divider">
         Account info
       </div>
