--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -6,7 +6,7 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Class page Tab -->
-  <ion-tab title="Class page" icon-off="ion-map" icon-on="ion-map" href="#/app/classpage">
+  <ion-tab title="Class page" icon-off="ion-map" icon-on="ion-map" href="#/app/classpage" id="classpageLink">
     <ion-nav-view name="app-classpage"></ion-nav-view>
   </ion-tab>
 
