--- a/www/templates/view-post.html
+++ b/www/templates/view-post.html
@@ -1,27 +1,32 @@
 <ion-view view-title="Audio blog post" ng-controller="ViewPostCtrl">
   <ion-content>
-    <h1>{{post.title}}</h1>
+    <h1 id="audioBlogPostTitle">{{post.title}}</h1>
     <div>
       <h2>{{post.content}}</h2>
-      <lgz-audio-player audio-id="post.audio_id" ng-show="post.audio_id > 0"></lgz-audio-player>
+      <lgz-audio-player audio-id="post.audio_id" ng-if="post.audio_id > 0"></lgz-audio-player>
     </div>
-    <ol ng-show="comments.length > 0">
+    <ol ng-if="comments.length > 0">
       <!-- TODO: Only show comments if the post is shared OR if the post is by the current user OR the teacher -->
-      <li ng-repeat="comment in comments track by $index" ng-show="post.shared || comment.user_id > 0">
+      <li ng-repeat="comment in comments track by $index" 
+          ng-if="post.shared || commentByCurrentUser(comment) || commentByTeacher(comment)">
         <div class="audio_comment">
-          <lgz-audio-player audio-id="comment.audio_id" ng-show="comment.audio_id > 0"></lgz-audio-player>
+          <lgz-audio-player audio-id="comment.audio_id" ng-if="comment.audio_id > 0"></lgz-audio-player>
           <div>
-            <blockquote>{{comment.content}}</blockquote>
-            <cite>{{comment.user.display_name}}</cite>
+            <blockquote>{{comment.content}} -<cite>{{comment.user.display_name}}</cite></blockquote>
           </div>
-          <!-- TODO: Show teacher feedback if this comment is by the current user -->
+          <div ng-if="commentByCurrentUser(comment)">
+            <p ng-if="comment.teacher_note"><em>{{comment.teacher_note}}</em></p>
+            <div ng-if="comment.rating > 0">
+              {{comment.rating}} stars
+            </div>
+          </div>
       </li>
     </ol>
     
     <form style="max-width: 500px">
       <p>Leave a comment</p>
       <div class="list list-inset">
-        <p>Your name: [current user's name]</p>
+        <p>Your name: {{user.info.display_name}}</p>
         <label class="item item-input">
           <textarea placeholder="Your comment"></textarea>
         </label>
@@ -31,7 +36,7 @@
           </button>
         </label>
       </div>
-      <button class="button button-positive">Submit your comment</button>
+      <button class="button button-positive" ng-click="tmp()">Submit your comment</button>
     </p>
   </ion-content>
 </ion-view>
