Course registration has browse ability mostly implemented

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -36,8 +36,8 @@
         </div>
       </label>
       <div>
-        <button class="button button-clear button-positive" ui-sref="app.login">
-          <i class="icon ion-ios-search"></i> Search for a new class page
+        <button class="button button-clear button-positive" ui-sref="app.new-registration" id="searchForClassBtn">
+          <i class="icon ion-ios-search"></i> Search for a class page
         </button>
       </div>
     </div>
