--- a/www/templates/new-registration.html
+++ b/www/templates/new-registration.html
@@ -1,13 +1,8 @@
 <ion-view view-title="Find a class page" ng-controller="RegistrationCtrl">
   <ion-content>
-    
+
     <div class="card">
-      <div class="item item-divider">Search for your school</div>
-      <input placeholder="Your school's name">
-    </div>
-    
-    <div class="card">
-      <div class="item item-divider">Or browse for your class</div>
+      <div class="item item-divider">Browse for your class</div>
       <div class="item item-text-wrap">
         <div>
           <ion-list>
