--- a/www/templates/school-show.html
+++ b/www/templates/school-show.html
@@ -5,7 +5,7 @@
       <div class="item item-divider">All classes at {{school.name}}</div>
       <div class="item item-text-wrap">
         <ion-list>
-          <ion-item ng-repeat="course in courses" ng-click="addClassPage">
+          <ion-item ng-repeat="course in courses" ng-click="addClassPage(course)">
             {{course.name}} <small>with {{course.user.display_name}}</small>
           </ion-item>
         </ion-list>
