--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -5,8 +5,9 @@
     <h3>UserId: {{ag.user_id}}</h3>
     <!--
     <div style="width:200px; height: 200px; background-color: red; color: white;"/>
+    allowfullscreen  webkitallowfullscreen mozallowfullscreen 
     -->
     <div style="">
-<iframe id="lgzFrame" src userid="{{ag.user_id}}" gameid="{{ag.game_id}}" gameswf="{{ag.game.activity.swf}}" height="425" width="600" frameBorder="0" allowfullscreen  webkitallowfullscreen mozallowfullscreen onload="console.log('iframe1')"></iframe>
+<iframe id="lgzFrame" src userid="{{ag.user_id}}" gameid="{{ag.game_id}}" gameswf="{{ag.game.activity.swf}}" height="425" width="600" frameBorder="0" onload="console.log('iframe1')"></iframe>
     </div>
 </ion-view>
