--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -7,8 +7,8 @@
       </div>
       <div class="item item-text-wrap" ng-show="user.uid">
         <div>
-          {{student.display_name}}<br />
-          <em>{{student.email}}</em>
+          {{student.info.display_name}}<br />
+          <em>{{student.info.email}}</em>
         </div>
         <button class="button button-assertive" ng-click="handleSignOut()">
           Sign out of your account <i class="icon ion-log-out"></i>
@@ -34,7 +34,7 @@
       
       <!-- TODO: Registrations should sort in order of when the registration was created. Currently not working. -->
       <label class="item item-radio" 
-              ng-repeat="reg in registrations track by $index | orderBy : sortRegistration(reg) : true"
+              ng-repeat="reg in student.registrations track by $index | orderBy : sortRegistration(reg) : true"
               ng-click="visitClassPage(reg.course.id)">
         <div class="item-content">
           {{reg.course.name}}<br />
