Fixing glitches to integrate iframe properly

--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Play a game!" xxx-controller="PlayGameCtrl">
+<ion-view view-title="Play a game!" ng-controller="PlayGameCtrl">
     <h1>XXXX</h1>
     <h1>Play {{ag.game.activity.name}}</h1>
     <h3>GameId: {{ag.game_id}}</h3>
