--- a/www/templates/tab-recent.html
+++ b/www/templates/tab-recent.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Your recent activity" xxx-controller="RecentCtrl">
+<ion-view view-title="Your recent activity" ng-controller="RecentCtrl">
   <ion-content class="padding">
     <div class="list card">
       <div class="item item-body" ng-repeat="fi in feed_items">
