--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -60,5 +60,15 @@
         </div>
       </div>
     </div>
+    <form id="uploadAudio" enctype="multipart/form-data">
+      <input type="text" id="commentAudioId" />
+      <button ng-click="recordAudio()">
+        Test me
+      </button>
+      <button ng-click="tmp()">
+        Tmp
+      </button>
+      <input type="submit" value="Submit form" />
+    </form>
   </ion-content>
 </ion-view>
