--- a/www/templates/view-post.html
+++ b/www/templates/view-post.html
@@ -31,12 +31,12 @@
           <textarea placeholder="Your comment"></textarea>
         </label>
         <label class="item item-input">
-          <button class="button button-outline button-assertive" ng-click="getPhoto()">
+          <button class="button button-outline button-assertive" ng-click="recordAudio()">
             <i class="icon ion-android-microphone"></i> Record an audio comment {{tmp}}
           </button>
         </label>
       </div>
-      <button class="button button-positive" ng-click="tmp()">Submit your comment</button>
+      <button class="button button-positive" ng-click="submitComment()">Submit your comment</button>
     </p>
   </ion-content>
 </ion-view>
