branch: ivanixgames_resync1a desc: - remerge branches lzapp_1a and lzapp_1a into new lz-app master. - confirm ion-header-bar overlap of content issue was fixed in   play-games.html by reinsert of missing ion-content tag.   - added id="lgzPlayContent" to remove header gap during fullscreen     play by removing/restoring its classes.

--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Play a game!" ng-controller="PlayGameCtrl">
-  <ion-content class="padding">
+  <ion-content id="lgzPlayContent" class="padding">
     
     <div ng-show="ag.game.activity.html5_compatible">    
       <h1>Play {{ag.game.activity.name}}</h1>
