Incremental, but incomplete, progress with audio recording comments

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -64,6 +64,7 @@
     <form id="uploadAudio" enctype="multipart/form-data">
       <input type="text" ng-model="newComment.audioId" id="commentAudioId" />
       <input type="text" ng-model="newComment.content" />
+      <input type="hidden" name="params" value="{{transloaditParams}}">
       <input type="file" id="audioFile" />
       <button ng-click="recordAudio()">
         Test me
