Experimentally adding ng-cloak to prevent DOM flashes

--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     
-    <div ng-show="!ag.game.activity.html5_compatible">
+    <div ng-show="!ag.game.activity.html5_compatible" ng-cloak>
       <h1>Designed for desktop</h1>
       <img ng-src="http://linguazone.s3.amazonaws.com/images/games/{{ag.game.activity.swf}}/{{ag.game.activity.swf}}.jpg">
       <h3>This game is not yet compatible with iOS. Try playing the game on a desktop or laptop for now.</h3>
