--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -11,7 +11,7 @@
           <em>{{student.info.email}}</em>
         </div>
         <br />
-        <button class="button button-assertive" ng-click="handleSignOut()">
+        <button class="button button-assertive" ng-click="handleSignOut()" ng-cloak>
           Sign out of your account <i class="icon ion-log-out"></i>
         </button>
       </div>
