--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,12 @@
+.blankStateMessage {
+  max-width: 400px;
+  text-align: center;
+  margin: 0px auto;
+}
+#welcomeMessage a, #welcomeMessage a:visited, #welcomeMessage a:link, #welcomeMessage a:active {
+  color: #ff6600;
+}
+
 .audio_comment {
   padding: 5px;
   margin: 10px 0px;
