--- a/www/templates/tab-recent.html
+++ b/www/templates/tab-recent.html
@@ -2,11 +2,16 @@
   <ion-content class="padding">
     
     <div ng-if="!hasUser && !hasActivity">
-      Create an account then return to this tab to keep an eye on your recent activity on LinguaZone.
+      <div class="blankStateMessage">
+        <img src="img/unknown_user.png" /><br />
+        Sign in to an account then return to this tab to keep an eye on your recent activity on LinguaZone.
+      </div>
     </div>
     
     <div ng-if="hasUser && !hasActivity">
-      Play games, study word lists, and record comments on audio blogs, then come back to this tab to see a record of your recent activity.
+      <div class="blankStateMessage">
+        Play games, study word lists, and record comments on audio blogs, then come back to this tab to see a record of your recent activity.
+    </div>
     </div>
     
     <div ng-if="hasUser && hasActivity">
